--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,17 +5,24 @@
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="container mt-5">
         <h1 class="text-center">Sentiment Analysis</h1>
         <form id="sentiment-form" class="mt-4">
             <div class="form-group">
                 <label for="text">Enter text:</label>
-                <input type="text" class="form-control" id="text" name="text" required>
+                <textarea class="form-control" id="text" name="text" rows="4" required></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Analyze</button>
+            <button id="submit" class="btn btn-primary" type="submit">Analyze</button>
         </form>
-        <p id="result" class="mt-3"></p>
+        <div id="result" class="alert alert-secondary" role="alert" style="display: none;">
+            <h4><b><p id="sentiment" class="mt-3"></p></b></h4>
+            Confidence:
+            <h3>
+                <p id="confidence" class="mt-3"></p>
+            </h3>
+        </div>
     </div>
 
     <!-- Bootstrap and jQuery JS -->
@@ -26,9 +31,12 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <script>
-        document.getElementById('sentiment-form').addEventListener('submit', function(event) {
-            event.preventDefault();
-            const text = document.getElementById('text').value;
+        function analyzeSentiment(text) {
+            if (text.length === 0) {
+                document.getElementById('result').style.display = 'none';
+                return;
+            }
+            
             fetch('/predict', {
                 method: 'POST',
                 headers: {
@@ -36,12 +44,26 @@
                 },
                 body: JSON.stringify({ text: text })
             })
-            .then(response => response.json())
-            .then(data => {
-                document.getElementById('result').innerText = `Sentiment: ${data.sentiment}, Confidence to be negative: ${data.confidence_to_be_negative}`;
-            })
-            .catch(error => console.error('Error:', error));
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById('result').style.display = 'block';
+                    document.getElementById('sentiment').innerText = `${data.sentiment}`;
+                    document.getElementById('confidence').innerText = `${data.confidence}`;
+                })
+                .catch(error => console.error('Error:', error));
+        }
+
+        document.getElementById('sentiment-form').addEventListener('submit', function (event) {
+            event.preventDefault();
+            const text = document.getElementById('text').value;
+            analyzeSentiment(text);
+        });
+
+        document.getElementById('text').addEventListener('input', function () {
+            const text = this.value;
+            analyzeSentiment(text);
         });
     </script>
 </body>
+
 </html>
